--- a/contactus.html
+++ b/contactus.html
@@ -90,7 +90,7 @@
         <label>Enter your name</label>
       </div>
       <div class="input-box">
-        <input type="email" required>
+        <input type="text" required>
         <label>Enter your email</label>
       </div>
       <div class="input-box">
