--- a/aboutme.html
+++ b/aboutme.html
@@ -107,6 +107,9 @@
                     <a href="https://www.facebook.com"><li>
                         <i class = "fa fa-facebook"></i>
                     </li></a>
+                    <a href="https://instagram.com/lakshay_hasija/"><li>
+                        <i class = "fa fa-instagram"></i>
+                    </li></a>
                     <a href="https://www.github.com"><li>
                         <i class = "fa fa-github"></i>
                     </li></a>
