--- a/tips.html
+++ b/tips.html
@@ -88,7 +88,9 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            To Improve your Gaming Skills: <br>
+            1) Improve Your Critical Thinking Skills. <br>
+            2) Improve Your Mental Dexterity.
           </p>
         </div>
       </div>
@@ -103,7 +105,7 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            Try different games and choose a game you’re interested in and dedicate time your time to playing that game. 
           </p>
         </div>
       </div>
@@ -118,7 +120,7 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            Try playing with pros so that you can learn something new from them.
           </p>
         </div>
       </div>
@@ -133,7 +135,7 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            Master your communication skills and learn to control your emotions to get better communications with your team mates while gaming.
           </p>
         </div>
       </div>
@@ -148,7 +150,7 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            If you want to become a better gamer, you should make sure that you can’t blame your losses on faulty gear and the wrong settings.          
           </p>
         </div>
       </div>
@@ -163,7 +165,7 @@
         <div>
           <h2>Tip</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit excepturi ipsum enim ducimus voluptatum cum repudiandae ea, ab nihil?
+            Learn the nuances of the tools and abilities that you’ve been given so that you can use them in creative ways.          
           </p>
         </div>
       </div>
