--- a/pcg.html
+++ b/pcg.html
@@ -95,8 +95,8 @@
           <div class="content">
               <h2>Mouse Sensitivity</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, quidem consequatur. Error, possimus optio itaque, nulla id ipsa soluta architecto tempora assumenda, hic omnis ab accusamus corrupti velit! Laudantium, ex eius. Porro repudiandae velit pariatur quam facere quaerat modi totam magnam ut consectetur, nihil ea quas, quasi nesciunt, minima tempore unde? Neque magni natus ut soluta veniam maxime eaque, nulla, unde repudiandae recusandae corporis! Sit veniam quasi delectus fugiat optio rerum deleniti itaque quis neque. Assumenda aliquid id voluptatem? Debitis similique maiores placeat aperiam fugiat iure. Dolore corporis, facilis, ullam obcaecati cupiditate iste omnis qui voluptatem repellat ad, maiores itaque!
-            </p>
+                In-game sensitivity controls how fast you turn in the game. This value is set inside your game, usually in the options menu under input. Sometimes only a slider with no values is shown in the menu, but you can usually set an exact value by using the game's console or configuration files. Each game handles sensitivity values in its own way but a lower sensitivity allows more precise movements, so it is usually best to set the in-game sensitivity to 1.0 or as low as possible and increase your mouse DPI to get the turning speed you want.            
+              </p>
           </div>
       </section>
       <section>
@@ -106,8 +106,7 @@
         <div class="content">
             <h2>Keyboard Settings</h2>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum quos ipsa necessitatibus fuga praesentium, distinctio quia perferendis harum eligendi, fugiat voluptates porro velit ipsam deserunt quasi ullam! Quidem harum illum id officiis, consequatur nulla maiores mollitia natus repellat asperiores quos quae facilis distinctio enim officia alias iste rem voluptate facere ipsam sapiente obcaecati pariatur? Accusamus totam accusantium inventore, illum atque corrupti eum ipsa, molestias soluta tempora sint impedit. Aliquid incidunt consectetur praesentium facilis asperiores. Provident numquam, necessitatibus quis amet illo inventore ut eos architecto tempora veritatis laudantium accusamus officia eum nemo laboriosam iusto expedita dolorem ipsa asperiores? 
-           </p>
+              Compared to a regular rubber dome keyboard (which is what most consumer grade boards are) each key on a mechanical plank houses a complete switch underneath it with its own housing, spring, and so on. This gives you a much crisper and precise typing/gaming sensation compared to a rubber dome board, because the latter uses a sheet of rubber that's laid out over the circuitry of the keyboard with a little dome underneath each key. Said dome depresses when you press a key, causing the top of the dome (which is coated with a conductive material on the inside) to make contact with the circuitry to register a key press, but that whole process can feel mushy, imprecise, and unsatisfying.           </p>
         </div>
     </section>
     <section>
@@ -117,7 +116,8 @@
         <div class="content">
             <h2>Know Your Parts</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, itaque magnam. Ad, illum quaerat. Optio, tempore magni eum esse animi nemo iste facilis quod debitis magnam illo, exercitationem deserunt! Nihil tempora, dicta quo laudantium soluta libero, minima nisi omnis commodi autem, perferendis iusto sapiente iste alias deserunt iure doloremque ipsum accusamus consequuntur deleniti. Vitae, culpa. Sequi corrupti debitis est minus minima. Excepturi id tenetur blanditiis nisi consequatur provident consectetur corporis culpa veniam a nam adipisci, quasi odio? Sequi dolore sit id quidem repudiandae, ad alias praesentium velit inventore animi dignissimos obcaecati vero illum repellendus facilis veritatis ullam. Nesciunt, sunt dignissimos veritatis ad consequuntur fuga, ratione similique rem expedita labore dicta.
+              You don’t have to settle for the optimization software package that came with your PC (if there is one), because there are plenty of alternatives available. Razer Cortex is free and one of the best, and you don’t need a Razer machine to use it. It’ll intelligently allocate system resources to your games when they need them, limit non-gaming apps, and generally squeeze as high a frame rate as possible from your hardware setup. <br>
+              Game Fire is another option that offers a similar array of tweaks and optimizations—shutting down unnecessary background processes, making sure your rig is using RAM efficiently, and watching out for potential slowdowns on your internet connection. It will set you back $18, but there’s a free version with basic functions included so you can decide if you like it (and see if it actually makes a difference) first.
             </p>
         </div>
     </section>
