--- a/ninten.html
+++ b/ninten.html
@@ -98,10 +98,13 @@
                 </section>
                 <section class="nintendo switch2">
                   <div class="details">
-                    <h1>Nintendo</h1>
-                    <h2>Switch</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto iure iusto autem. Necessitatibus minima quasi consequatur suscipit culpa, itaque dicta.</p>
-                </div>
+                    <h1>Nintendo <br>
+                    Switch</h1>
+                    <h2>extremely flexible</h2>
+                      <p>
+                        It’s extremely flexible. The main selling point of Switch is its ability to transform from a home console to a portable gaming system in a snap. And on that front, it works as well as advertised. Transitioning from one style of gaming to another takes seconds and lets you continue playing right where you left off. A likely use-case is people who want to keep playing when their spouse/parent/roommate wants to watch something on the TV.
+                      </p>
+                  </div>
                     <div class="hero">
                         <img class="model-left" src="./Nintendo/image_part_001.jpg" alt="">
                         <img class="model-right" src="./Nintendo/image_part_002.jpg" alt="">
@@ -109,10 +112,13 @@
                 </section>
                 <section class="nintendo switch3">
                   <div class="details">
-                    <h1>Nintendo</h1>
-                    <h2>Switch</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto iure iusto autem. Necessitatibus minima quasi consequatur suscipit culpa, itaque dicta.</p>
-                </div>
+                    <h1>Nintendo <br>
+                    Switch</h1>
+                    <h2>Loading Time</h2>
+                      <p>
+                        Games load in a snap. If you own a PlayStation 4 or Xbox One, you know how quickly those can dampen enthusiasm for a new game, thanks to the requirement to copy a game to the system’s hard drive before launching, which can take from 5 minutes to half an hour. With Switch, you plug in the cartridge, roughly the size of a SD memory card for a camera, and it’s ready to launch immediately. (Note: Since digital downloads weren’t available for testing, it’s currently impossible to say whether this is also the case with games purchased from the eStore.) This might seem a small feature, but it underscores Nintendo’s commitment to the player.
+                      </p>
+                  </div>
                     <div class="hero">
                         <img class="model-left" src="./Nintendo/image_part_001 (1).jpg" alt="">
                         <img class="model-right" src="./Nintendo/image_part_002 (1).jpg" alt="">
