--- a/aboutme.html
+++ b/aboutme.html
@@ -86,7 +86,7 @@
                 <h2>About Me</h2>
                 <span><!-- line here --></span>
 
-                <p>Hello <br> I Lakshay Hasija currently pursuing B.Voc. Software Development from Ramanujan college, Delhi University am seeking an opportunity for internship. I have a keen eye for learning technical stuff and and am interested in Graphical Designing.</p>
+                <p>Hello <br> I Lakshay Hasija graduated with B.Voc. Software Development from Ramanujan college, Delhi University am seeking an Enrty level opportunity. I have a keen eye for learning technical stuff and and am interested in Data Analyst.</p>
 
                 <ul class = "links">
                     <li><a href = "./index.html">HOME</a></li>
